# CIE-assessment

./: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
core/: settings.py  urls.py
includes/script/: dev_server.sh
includes/scripts/: dev_server.sh
inventory/: admin.py  urls.py
inventory/filters/: products.py
inventory/migrations/: 0001_initial.py  0002_rename_ownder_inventory_owner_alter_category_name.py  0003_product_inventory.py  0004_alter_category_slug_alter_product_slug.py
inventory/models/: inventory.py
inventory/permissions/: inventory.py
inventory/serializers/: inventory.py
inventory/views/: inventory.py
users/: admin.py  authentication.py
users/migrations/: 0001_initial.py  0002_timedauthtoken.py
users/models/: __init__.py  auth.py  users.py
users/serializers/: auth.py  users.py
users/tests/: users.py
users/views/: auth.py
